--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main class="main-content">
 
         <table>
-            <th colspan="5">INVENTORY</th>
+            <th colspan="5"><h4>INVENTORY</h4></th>
             <tr>
                 <td><input type="checkbox" id="check-1" tabindex="21" checked onchange="setLocalStorage()">
                 </td>
@@ -154,7 +154,7 @@
 
     <section class="left-sidebar">
         <table class="table">
-            <th colspan="2"><b>ABILITY SCORES</b></th>
+            <th colspan="2"><h4>ABILITY SCORES</h4></th>
             <tr>
                 <td>
                     &thinsp;
@@ -236,9 +236,6 @@
                     <td style="text-align: right;">AC &ensp;</td>
                     <td><input type="number" id="ac" value="11" min="11" max="31" tabindex="54"
                             onchange="setLocalStorage()"></td>
-                </tr>
-                <tr style="line-height: 0.7em;">
-                    <td>&emsp;</td>
                 </tr>
                 <tr>
                     <td style="text-align: right;">Speed &ensp;</td>
