Added initialize page button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <main class="main-content">
 
         <table>
-            <th colspan="5"><h4>INVENTORY</h4></th>
+            <th colspan="5">
+                <h4>INVENTORY</h4>
+            </th>
             <tr>
                 <td><input type="checkbox" id="check-1" tabindex="21" checked onchange="setLocalStorage()">
                 </td>
@@ -154,7 +156,9 @@
 
     <section class="left-sidebar">
         <table class="table">
-            <th colspan="2"><h4>ABILITY SCORES</h4></th>
+            <th colspan="2">
+                <h4>ABILITY SCORES</h4>
+            </th>
             <tr>
                 <td>
                     &thinsp;
@@ -263,7 +267,9 @@
             </table>
         </center>
     </aside>
-    <footer class="footer">Footer</footer>
+    <footer class="footer">Footer
+        <button onclick=initializePage()> Clear Sheet </button>
+    </footer>
 </div>
 
 </html>
