--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </center>
     </aside>
     <footer class="footer">Footer
-        <button onclick=initializePage()> Clear Sheet </button>
+        <button onclick=initializePage()> Initialize Sheet </button>
     </footer>
 </div>
 
