--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <i class="bi bi-dice-1"></i>
                     &thinsp; STR
                 </td>
-                <td><input type="number" id="strScore" value="0" min="0" max="10" onchange="setLocalStorage()">
+                <td><input type="number" id="strScore" min="0" max="10" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
@@ -174,7 +174,7 @@
                     <i class="bi bi-dice-2"></i>
                     &thinsp; DEX
                 </td>
-                <td><input type="number" id="dexScore" value="0" min="0" max="10" onchange="setLocalStorage()">
+                <td><input type="number" id="dexScore" min="0" max="10" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
@@ -183,7 +183,7 @@
                     <i class="bi bi-dice-3"></i>
                     &thinsp; CON
                 </td>
-                <td><input type="number" id="conScore" value="0" min="0" max="10" onchange="setLocalStorage()">
+                <td><input type="number" id="conScore" min="0" max="10" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
@@ -192,7 +192,7 @@
                     <i class="bi bi-dice-4"></i>
                     &thinsp; INT
                 </td>
-                <td><input type="number" id="intScore" value="0" min="0" max="10" onchange="setLocalStorage()">
+                <td><input type="number" id="intScore" min="0" max="10" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
@@ -201,7 +201,7 @@
                     <i class="bi bi-dice-5"></i>
                     &thinsp; WIS
                 </td>
-                <td><input type="number" id="wisScore" value="0" min="0" max="10" onchange="setLocalStorage()">
+                <td><input type="number" id="wisScore" min="0" max="10" onchange="setLocalStorage()">
                 </td>
             </tr>
             <tr>
@@ -210,7 +210,7 @@
                     <i class="bi bi-dice-6"></i>
                     &thinsp; CHA
                 </td>
-                <td><input type="number" id="chaScore" value="0" min="0" max="10" onchange="setLocalStorage()">
+                <td><input type="number" id="chaScore" min="0" max="10" onchange="setLocalStorage()">
                 </td>
             </tr>
         </table>
@@ -220,8 +220,8 @@
             <table>
                 <tr>
                     <td style="text-align: right;">Level &ensp;</td>
-                    <td><input type="number" id="level" value="1" min="1" max="10" tabindex="51"
-                            onchange="setLocalStorage()"></td>
+                    <td><input type="number" id="level" min="1" max="10" tabindex="51" onchange="setLocalStorage()">
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align: right;">XP &ensp;</td>
@@ -233,13 +233,12 @@
                 </tr>
                 <tr>
                     <td style="text-align: right;">Max HP &ensp;</td>
-                    <td><input type="number" id="maxHp" value="1" min="1" max="75" tabindex="53"
-                            onchange="setLocalStorage()"></td>
+                    <td><input type="number" id="maxHp" min="1" max="75" tabindex="53" onchange="setLocalStorage()">
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align: right;">AC &ensp;</td>
-                    <td><input type="number" id="ac" value="11" min="11" max="31" tabindex="54"
-                            onchange="setLocalStorage()"></td>
+                    <td><input type="number" id="ac" min="11" max="31" tabindex="54" onchange="setLocalStorage()"></td>
                 </tr>
                 <tr>
                     <td style="text-align: right;">Speed &ensp;</td>
@@ -267,8 +266,8 @@
             </table>
         </center>
     </aside>
-    <footer class="footer">Footer
-        <button onclick=initializePage()> Initialize Sheet </button>
+    <footer class="footer">
+        <button onclick=initializePage()> Initialize </button>
     </footer>
 </div>
 
