--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
     </aside>
     <footer class="footer">
         <button onclick=initializePage()> Initialize </button>
+        <button onclick=exportChar()> Export </button>
+        <button onclick=importChar()> Import </button>
     </footer>
 </div>
 
