Added JSON character sheet import

--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
     <footer class="footer">
         <button onclick=initializePage()> Initialize </button>
         <button onclick=exportChar()> Export </button>
-        <button onclick=importChar()> Import </button>
+        <input type="file" id="file-input" />
+        <button id="read-button"> Import </button>
     </footer>
 </div>
 
