Button bar updates

--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
         </center>
     </aside>
     <footer class="footer">
-        <button onclick=initializePage()> Initialize </button>
-        <button onclick=exportChar()> Export </button>
-        <input type="file" id="file-input" />
-        <button id="read-button"> Import </button>
+        <button class="button" onclick=initializePage()> Initialize </button>
+        <button class="button" onclick=exportChar()> Export </button>
+        <div class="alt-btn"> Choose File <input type="file" class="hide-file"></div>
+        <button class="button" id="read-button"> Import </button>
     </footer>
 </div>
 
