Fixed broken character sheet import

--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
     <footer class="footer">
         <button class="button" onclick=initializePage()> Initialize </button>
         <button class="button" onclick=exportChar()> Export </button>
-        <input type="file" id="import-char" hidden />
-        <label class="alt-btn" id="read-button" for="import-char"> Import </label>
+        <input type="file" id="importChar" accept=".json" hidden />
+        <label class="alt-btn" id="readButton" for="importChar"> Import </label>
     </footer>
 </div>
 
