Updated careers dropdowns

--- a/index.html
+++ b/index.html
@@ -250,18 +250,21 @@
                     <td>&emsp;</td>
                 </tr>
                 <tr>
-                    <td colspan=2 style="text-align: center;">Career 1</td>
+                    <td colspan=2 style="text-align: center;">Careers</td>
                 </tr>
                 <tr>
-                    <td colspan=2><input type="text" id="career1" style="width: 95%;" tabindex="56"
-                            onchange="setLocalStorage()"></td>
+                    <td colspan=2>
+                        <select class="careers" id="career1">
+                            <option value="" selected> Choose 1st Career </option>
+                        </select>
+                    </td>
                 </tr>
                 <tr>
-                    <td colspan=2 style="text-align: center;">Career 2</td>
-                </tr>
-                <tr>
-                    <td colspan=2><input type="text" id="career2" style="width: 95%;" tabindex="57"
-                            onchange="setLocalStorage()"></td>
+                    <td colspan=2>
+                        <select class="careers" id="career2">
+                            <option value="" selected> Choose 2nd Career </option>
+                        </select>
+                    </td>
                 </tr>
             </table>
         </center>
