--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="holy-grail-grid">
     <div class="header-content">
         <div>
-            <h2>Character</h2>
+            <h2> Character </h2>
             <div align="center">
                 <input type="text" id="charName" style="width: 11.5rem; text-align: center" placeholder="Character Name"
                     tabindex="1" onchange="setLocalStorage()">
@@ -28,7 +28,7 @@
             <img src="/assets/knave-2e-logo.webp" alt="knave-2e-logo" class="resizable-image">
         </div>
         <div>
-            <h2>Player</h2>
+            <h2> Player </h2>
             <div align="center">
                 <input type="text" id="playerName" style="width: 11.5rem; text-align: center" placeholder="Player Name"
                     tabindex="1" onchange="setLocalStorage()">
@@ -39,7 +39,7 @@
     <div class="main-content">
         <table>
             <th colspan="5">
-                <h4>INVENTORY</h4>
+                <h4> INVENTORY </h4>
             </th>
             <tr>
                 <td><input type="checkbox" id="check-1" checked onchange="setLocalStorage()">
@@ -214,7 +214,7 @@
             </tr>
         </table>
         <div>
-            <h4>ROLL FOR:</h4>
+            <h4> ROLL FOR </h4>
             <div style="margin-bottom: 3px"><button class="button" onclick=rollAbilities()> Abilities </button></div>
             <div style="margin-bottom: 3px"><button class="button" onclick=rollHP()> Hit Points </button></div>
         </div>
