--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                     <i class="bi bi-dice-1"></i>
                     &thinsp; STR
                 </td>
-                <td><input type="number" id="strScore" min="0" max="10" onchange="setLocalStorage()">
+                <td><input class="valid-scores" type="number" id="strScore" min="0" max="10"
+                        onchange="setLocalStorage();">
                 </td>
             </tr>
             <tr>
@@ -173,7 +174,8 @@
                     <i class="bi bi-dice-2"></i>
                     &thinsp; DEX
                 </td>
-                <td><input type="number" id="dexScore" min="0" max="10" onchange="setLocalStorage()">
+                <td><input class="valid-scores" type="number" id="dexScore" min="0" max="10"
+                        oonchange="setLocalStorage();">
                 </td>
             </tr>
             <tr>
@@ -182,7 +184,8 @@
                     <i class="bi bi-dice-3"></i>
                     &thinsp; CON
                 </td>
-                <td><input type="number" id="conScore" min="0" max="10" onchange="setLocalStorage()">
+                <td><input class="valid-scores" type="number" id="conScore" min="0" max="10"
+                        onchange="setLocalStorage();">
                 </td>
             </tr>
             <tr>
@@ -191,7 +194,8 @@
                     <i class="bi bi-dice-4"></i>
                     &thinsp; INT
                 </td>
-                <td><input type="number" id="intScore" min="0" max="10" onchange="setLocalStorage()">
+                <td><input class="valid-scores" type="number" id="intScore" min="0" max="10"
+                        onchange="setLocalStorage();">
                 </td>
             </tr>
             <tr>
@@ -200,7 +204,8 @@
                     <i class="bi bi-dice-5"></i>
                     &thinsp; WIS
                 </td>
-                <td><input type="number" id="wisScore" min="0" max="10" onchange="setLocalStorage()">
+                <td><input class="valid-scores" type="number" id="wisScore" min="0" max="10"
+                        onchange="setLocalStorage();">
                 </td>
             </tr>
             <tr>
@@ -209,7 +214,8 @@
                     <i class="bi bi-dice-6"></i>
                     &thinsp; CHA
                 </td>
-                <td><input type="number" id="chaScore" min="0" max="10" onchange="setLocalStorage()">
+                <td><input class="valid-scores" type="number" id="chaScore" min="0" max="10"
+                        onchange="setLocalStorage();">
                 </td>
             </tr>
         </table>
