Adjusted text field widths

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div>
             <h2> Character </h2>
             <div align="center">
-                <input type="text" id="charName" style="width: 11.5rem; text-align: center" placeholder="Character Name"
-                    tabindex="1" onchange="setLocalStorage()">
+                <input type="text" id="charName" style="text-align: center" placeholder="Character Name" tabindex="1"
+                    onchange="setLocalStorage()">
             </div>
         </div>
         <div style="width: 33%">
@@ -32,8 +32,8 @@
         <div>
             <h2> Player </h2>
             <div align="center">
-                <input type="text" id="playerName" style="width: 11.5rem; text-align: center" placeholder="Player Name"
-                    tabindex="1" onchange="setLocalStorage()">
+                <input type="text" id="playerName" style="text-align: center" placeholder="Player Name" tabindex="1"
+                    onchange="setLocalStorage()">
             </div>
         </div>
     </div>
