More mobile formatting

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                         tabindex="1" onchange="setLocalStorage()">
                 </div>
             </div>
-            <div style="width: 33%">
-                <img src="/assets/knave-2e-logo.webp" alt="knave-2e-logo" class="resizable-image">
+            <div class="resizable-logo">
+                <h4>Knave 2E</h4>
             </div>
             <div>
                 <h2> Player </h2>
@@ -278,6 +278,7 @@
                 <select id="career1" tabindex="56" onchange="setLocalStorage()">
                     <option value="" selected> 1st Career </option>
                 </select>
+                <br>
                 <select id="career2" tabindex="57" onchange="setLocalStorage()">
                     <option value="" selected> 2nd Career </option>
                 </select>
