--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                         tabindex="1" onchange="setLocalStorage()">
                 </div>
             </div>
-            <div class="resizable-logo">
-                <h4>Knave 2E</h4>
-            </div>
+            <div class="logo">Knave 2E</div>
             <div>
                 <h2> Player </h2>
                 <div align="center">
@@ -244,6 +242,9 @@
 
         <div class="right-sidebar">
             <table>
+                <th colspan="2">
+                    <h4>COMBAT STATS</h4>
+                </th>
                 <tr>
                     <td style="text-align: right"> Level &ensp;</td>
                     <td><input type="number" id="level" min="1" max="10" tabindex="51" onchange="setLocalStorage()">
@@ -254,7 +255,7 @@
                     <td><input type="text" id="xp" style="width: 2.7rem; text-align: center;" tabindex="52"
                             onchange="setLocalStorage()"></td>
                 </tr>
-                <tr style="line-height: 0.7em">
+                <tr style="line-height: 1.5rem">
                     <td>&emsp;</td>
                 </tr>
                 <tr>
