Formatting fine tuning

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <div>
                 <h2> Character </h2>
                 <div align="center">
-                    <input type="text" id="charName" style="text-align: center" placeholder="Character Name"
-                        tabindex="1" onchange="setLocalStorage()">
+                    <input type="text" id="charName" style="text-align: center" placeholder="Name" tabindex="1"
+                        onchange="setLocalStorage()">
                 </div>
             </div>
             <div class="logo">Knave 2E</div>
             <div>
                 <h2> Player </h2>
                 <div align="center">
-                    <input type="text" id="playerName" style="text-align: center" placeholder="Player Name" tabindex="1"
+                    <input type="text" id="playerName" style="text-align: center" placeholder="Name" tabindex="1"
                         onchange="setLocalStorage()">
                 </div>
             </div>
@@ -233,7 +233,7 @@
                 </tr>
             </table>
             <div>
-                <h4> ROLL FOR </h4>
+                <h4 style="margin-top: 0.75rem"> ROLL FOR </h4>
                 <div style="margin-bottom: 3px"><button class="button" onclick=rollAbilities()> Abilities </button>
                 </div>
                 <div style="margin-bottom: 3px"><button class="button" onclick=rollHP()> Hit Points </button></div>
@@ -275,7 +275,7 @@
                 </tr>
             </table>
             <div align="center">
-                <h4> CAREERS </h4>
+                <h4 style="margin-top: 0.75rem"> CAREERS </h4>
                 <select id="career1" tabindex="56" onchange="setLocalStorage()">
                     <option value="" selected> 1st Career </option>
                 </select>
